Harden MaceGuard runtime lifecycle