@@ -1,6 +1,5 @@
 package com.lincoln.maceguard.core.model;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -15,8 +14,8 @@ public final class SnapshotData {
         this.zoneName = zoneName;
         this.worldName = worldName;
         this.region = region;
-        this.blocks = Collections.unmodifiableMap(blocks);
-        this.serializedBlocks = Collections.unmodifiableList(serializedBlocks);
+        this.blocks = Map.copyOf(blocks);
+        this.serializedBlocks = List.copyOf(serializedBlocks);
     }
 
     public String zoneName() {
